# short.hand

./: .gitignore  .pre-commit-config.yaml  README.md  attr_doc.py  cwd_polyglot.c  cwd_polyglot.h  docstring.mustache  import_shorthand.py  pip-common.cmd  pod-runner.bat  pod-timing.py  pod.py  py3k_compat.py  pyproject.toml  quicklog.py  s.h  shorthand.py  slh.py  starship.toml
debian/: update.sh
debian/.config/fish/functions/: how_long.fish
fish/: config.fish
fish/functions/: cosmo.fish  get_memzoom.fish
linux/: fish-plugins.sh  pip-debian.sh  update-apt.sh  update-debian.sh  update.sh
linux/.config/: starship.toml
linux/.config/fish/: config.fish
linux/.config/fish/functions/: compare.fish
pod/: pod.py  pod_formats.py  pod_results.py  pyproject.toml  requirements.txt
src/: pod-runner.bat  pod.py  py3k_compat.py  quicklog.py
